# longbridge

./: .gitignore  AI_ANALYSIS_PANEL_GUIDE.md  AI_PROMPT_BEFORE_AFTER_EXAMPLES.md  AI_PROMPT_STOCK_TRADING_V2.md  AI_PROMPT_TACTICAL_TRADER.md  AI_SCORING_SYSTEM.md  AI_STOCK_PICKER_OPTIMIZATION_PLAN.md  AI_STOCK_PICKER_V3.1_FIX_SUMMARY.md  AI_STOCK_PICKER_V3_SUMMARY.md  AI_TRADING_COMPLETE_FIX_SUMMARY.md  AI_TRADING_ENABLE_REAL_TRADING.md  AI_TRADING_FIX_COMPLETED.md  AI_TRADING_FIX_ENUM_ERRORS.md  AI_TRADING_NO_ACTION_SUMMARY.md  AI_TRADING_POSITION_CONFLICT.md  AI_TRADING_PROMPT_OPTIMIZATION.md  AI_TRADING_V2_SUMMARY.md  BUGFIX_DEEPSEEK_CREDENTIALS.md  BUGFIX_ENABLE_REAL_TRADING.md  BUGFIX_REALTIME_LOGS.md  BUGFIX_TRADING_TIMEOUT.md  CHANGELOG_STRATEGY_CREATION.md  CLAUDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SUMMARY_OCT24.md  DATABASE_LOCK_SOLUTION.md  DEEPSEEK_AI_MODE_ENABLED.md  DEEPSEEK_AI_UPGRADE_SUMMARY.md  DEEPSEEK_QUICK_START.md  FEATURE_ANALYSIS_PROGRESS.md  FEATURE_CLEAR_BEFORE_ADD.md  FIX_AI_TRADING_GUIDE.md  FIX_DATABASE_LOCK.md  FIX_STOCK_PICKER_CLEAR.md  PROJECT_OVERVIEW.md  QUICK_FIX_STEPS.md  QUICK_START_AI_TRADING.md  QUICK_START_POSITION_KLINES.md  QUICK_START_TACTICAL_STYLE.md  README.md  (+39 more)
backend/: README.md  debug_sync.py  pyproject.toml  start_realtime_stream.py  sync_candlesticks.py  test_candlesticks.py  test_websocket.py  test_ws.py  trigger_quotes.py  update_symbols.py
backend/app/: ai_analyzer.py  ai_trading_engine.py  auto_position_manager.py  config.py  db.py  eodhd_client.py  exceptions.py  main.py  models.py  news_analyzer.py  services.py  (+10 more)
(+135 files in other folders)
